# green_monitoring

./: CMakeLists.txt  MWE.cpp  README.md  index.md  license.md
html/: DocumentationSection.html  ExampleSection.html  Funf.html  GettingStarted.html  GettingStartedSection.html  GettingStartedSection.js  KIG_8h.html  KIG_8h.js  KIG_8h_source.html  License.html  annotated.html  annotated_dup.js  classes.html  color_override.css  dir_0395666debd4cc358ffa9e2077971cdb.html  dir_78b01f221e5d69dbe1f7a50c401396d7.html  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  doxygen.css  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_func.html  gmonit_8cpp.html  greenHPC_8h.html  greenHPC_8h.js  greenHPC_8h_source.html  index.html  index.js  md_Doc_Example.html  md_Doc_Pages_Example.html  md_Doc_Pages_QuickStart.html  md_Doc_Pages_about.html  md_Doc_Pages_mainpage.html  md_Doc_QuickStart.html  md_Doc_about.html  md_Doc_about.js  md_Doc_prova.html  (+12 more)
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  search.css  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js
source/: KIG.cpp  KIG.h
